--- a/views/index.ejs
+++ b/views/index.ejs
@@ -11,7 +11,7 @@
 
     <div class="container">
         <h1>URL Shrinker</h1>
-        <form action="" method="POST" class="my-4 form-inline">
+        <form action="/shortUrls" method="POST" class="my-4 form-inline">
             <label for="fullUrl">URL:</label>
             <input required placeholder="Write URLs here" type="url" name="fullUrl" id="fullUrl" class="form-control mr-2">
             <button class="btn btn-success" type="submit">Shrink</button>
@@ -26,11 +26,13 @@
                 </tr>
             </thead>
             <tbody>
-                <tr>
-                    <td><a href="https://github.com/shubhangNarain">https://github.com/shubhangNarain</a></td>
-                    <td><a href="/123456">123456</a></td>
-                    <td>10</td> 
-                </tr>
+                <% shortUrls.forEach(shortUrl => { %>
+                    <tr>
+                        <td><a href="<%= shortUrl.full %>"> <%=shortUrl.full %> </a></td>
+                        <td><a href="<%= shortUrl.short %>"> <%= shortUrl.short %></a></td>
+                        <td><%= shortUrl.clicks%></td> 
+                    </tr>
+                <% }) %>
             </tbody>
         </table>
     </div>
